force-app/main/default/objects/CR_Vehicle_Information__c/CR_Vehicle_Information__c.object-meta.xml
<CustomObject>
    <label>CR車両情報</label>
    <nameField>
        <label>CR用管理番号</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>