force-app/main/default/objects/CR_Vehicle_Information__c/fields/A_Category__c.field-meta.xml
<CustomField>
    <fullName>A_Category__c</fullName>
    <label>A区分</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>自社</fullName>
            </value>
            <value>
                <fullName>代行</fullName>
            </value>
            <value>
                <fullName>リユース</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>