force-app/main/default/objects/CR_Vehicle_Information__c/fields/Additional_Cost__c.field-meta.xml
<CustomField>
    <fullName>Additional_Cost__c</fullName>
    <label>追加費用（原価）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>