force-app/main/default/objects/CR_Vehicle_Information__c/fields/Additional_Cost_Category__c.field-meta.xml
<CustomField>
    <fullName>Additional_Cost_Category__c</fullName>
    <label>追加費用（カテゴリ）</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ガラス取り外し</fullName>
            </value>
            <value>
                <fullName>サイドガラス外し</fullName>
            </value>
            <value>
                <fullName>リアカット</fullName>
            </value>
            <value>
                <fullName>リアフェンダーカット</fullName>
            </value>
            <value>
                <fullName>ルーフカット</fullName>
            </value>
            <value>
                <fullName>サイドシルカット</fullName>
            </value>
            <value>
                <fullName>追加ラッピング</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>