force-app/main/default/objects/CR_Vehicle_Information__c/fields/Additional_Cost_Memo__c.field-meta.xml
<CustomField>
    <fullName>Additional_Cost_Memo__c</fullName>
    <label>追加費用（原価メモ）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>