force-app/main/default/objects/CR_Vehicle_Information__c/fields/Additional_costs_gross_profit__c.field-meta.xml
<CustomField>
    <fullName>Additional_costs_gross_profit__c</fullName>
    <description>追加費用の売上-原価＝粗利</description>
    <formula>Additional_Sales__c - Additional_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>追加費用（粗利）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>