force-app/main/default/objects/CR_Vehicle_Information__c/fields/Agent_fee__c.field-meta.xml
<CustomField>
    <fullName>Agent_fee__c</fullName>
    <label>Agent fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>