force-app/main/default/objects/CR_Vehicle_Information__c/fields/Auction_Data__c.field-meta.xml
<CustomField>
    <fullName>Auction_Data__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>オークション出品データ</label>
    <referenceTo>Auction_Data__c</referenceTo>
    <relationshipLabel>CR車両情報</relationshipLabel>
    <relationshipName>CR</relationshipName>
    <type>Lookup</type>
</CustomField>