force-app/main/default/objects/CR_Vehicle_Information__c/fields/Auction_Yard__c.field-meta.xml
<CustomField>
    <fullName>Auction_Yard__c</fullName>
    <label>落札ヤード</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yard</valueSetName>
    </valueSet>
</CustomField>