force-app/main/default/objects/CR_Vehicle_Information__c/fields/B_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>B_Vehicle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>B車両</label>
    <type>Checkbox</type>
</CustomField>