force-app/main/default/objects/CR_Vehicle_Information__c/fields/CFC__c.field-meta.xml
<CustomField>
    <fullName>CFC__c</fullName>
    <label>フロン</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>有</fullName>
            </value>
            <value>
                <fullName>無</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>