force-app/main/default/objects/CR_Vehicle_Information__c/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <label>状態</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>可動</fullName>
            </value>
            <value>
                <fullName>不動</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>