force-app/main/default/objects/CR_Vehicle_Information__c/fields/Container_Number__c.field-meta.xml
<CustomField>
    <fullName>Container_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CON No</label>
    <referenceTo>CR_Container__c</referenceTo>
    <relationshipLabel>CR車両情報</relationshipLabel>
    <relationshipName>CR</relationshipName>
    <type>Lookup</type>
</CustomField>