force-app/main/default/objects/CR_Vehicle_Information__c/fields/Container_Number_hikae__c.field-meta.xml
<CustomField>
    <fullName>Container_Number_hikae__c</fullName>
    <description>参照項目に直接記載しにいけないため、いったん控えとしてここに記載</description>
    <label>CON No（仮記載場所）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>