force-app/main/default/objects/CR_Vehicle_Information__c/fields/Cost__c.field-meta.xml
<CustomField>
    <fullName>Cost__c</fullName>
    <label>原価</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>