force-app/main/default/objects/CR_Vehicle_Information__c/fields/CR_Relation__c.field-meta.xml
<CustomField>
    <fullName>CR_Relation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>もとのCR車両データ</label>
    <referenceTo>CR_Vehicle_Information__c</referenceTo>
    <relationshipLabel>CR車両情報</relationshipLabel>
    <relationshipName>CR</relationshipName>
    <type>Lookup</type>
</CustomField>