force-app/main/default/objects/CR_Vehicle_Information__c/fields/Cutting_Charge__c.field-meta.xml
<CustomField>
    <fullName>Cutting_Charge__c</fullName>
    <label>Cutting Charge/積込費用</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>