force-app/main/default/objects/CR_Vehicle_Information__c/fields/Cutting_Charge_memo__c.field-meta.xml
<CustomField>
    <fullName>Cutting_Charge_memo__c</fullName>
    <label>Cutting Charge メモ</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>