force-app/main/default/objects/CR_Vehicle_Information__c/fields/Cutting_Fee__c.field-meta.xml
<CustomField>
    <fullName>Cutting_Fee__c</fullName>
    <label>カット費用</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>