force-app/main/default/objects/CR_Vehicle_Information__c/fields/Cutting_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Cutting_Remarks__c</fullName>
    <label>カット　備考</label>
    <length>255</length>
    <type>Text</type>
</CustomField>