force-app/main/default/objects/CR_Vehicle_Information__c/fields/Declared_Value__c.field-meta.xml
<CustomField>
    <fullName>Declared_Value__c</fullName>
    <label>申告額</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>