force-app/main/default/objects/CR_Vehicle_Information__c/fields/Dismantler__c.field-meta.xml
<CustomField>
    <fullName>Dismantler__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>登録解体業者</label>
    <referenceTo>Dismantler__c</referenceTo>
    <relationshipLabel>CR車両情報</relationshipLabel>
    <relationshipName>CR</relationshipName>
    <type>Lookup</type>
</CustomField>