force-app/main/default/objects/CR_Vehicle_Information__c/fields/Dismantler_text__c.field-meta.xml
<CustomField>
    <fullName>Dismantler_text__c</fullName>
    <label>登録解体業者（テキスト）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>