force-app/main/default/objects/CR_Vehicle_Information__c/fields/Dismantling_CompanyDis_pulldown__c.field-meta.xml
<CustomField>
    <fullName>Dismantling_CompanyDis_pulldown__c</fullName>
    <label>解体業者</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AFKトレーディング</fullName>
            </value>
            <value>
                <fullName>ヤマモトコーポレーション</fullName>
            </value>
            <value>
                <fullName>チャンダナ商店</fullName>
            </value>
            <value>
                <fullName>茂華</fullName>
            </value>
            <value>
                <fullName>サハール</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>