force-app/main/default/objects/CR_Vehicle_Information__c/fields/Dismantling_Yard_Entry_Date__c.field-meta.xml
<CustomField>
    <fullName>Dismantling_Yard_Entry_Date__c</fullName>
    <label>解体ヤード入庫日</label>
    <type>Date</type>
</CustomField>