force-app/main/default/objects/CR_Vehicle_Information__c/fields/Engine_Model__c.field-meta.xml
<CustomField>
    <fullName>Engine_Model__c</fullName>
    <label>エンジン型式</label>
    <length>255</length>
    <type>Text</type>
</CustomField>