force-app/main/default/objects/CR_Vehicle_Information__c/fields/Finish__c.field-meta.xml
<CustomField>
    <fullName>Finish__c</fullName>
    <defaultValue>false</defaultValue>
    <label>完了</label>
    <type>Checkbox</type>
</CustomField>