force-app/main/default/objects/CR_Vehicle_Information__c/fields/Hybrid_Flag__c.field-meta.xml
<CustomField>
    <fullName>Hybrid_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ハイブリッド</label>
    <type>Checkbox</type>
</CustomField>