force-app/main/default/objects/CR_Vehicle_Information__c/fields/Initial_Registration_Year_Month__c.field-meta.xml
<CustomField>
    <fullName>Initial_Registration_Year_Month__c</fullName>
    <label>初年度登録年/月</label>
    <length>255</length>
    <type>Text</type>
</CustomField>