force-app/main/default/objects/CR_Vehicle_Information__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <label>請求書番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>