force-app/main/default/objects/CR_Vehicle_Information__c/fields/Land_Transport_Arrangement_Destination__c.field-meta.xml
<CustomField>
    <fullName>Land_Transport_Arrangement_Destination__c</fullName>
    <label>手配先</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>解体ヤード</fullName>
            </value>
            <value>
                <fullName>最寄りヤード</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>