force-app/main/default/objects/CR_Vehicle_Information__c/fields/Land_Transportation_Fee__c.field-meta.xml
<CustomField>
    <fullName>Land_Transportation_Fee__c</fullName>
    <label>陸送費用</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>