force-app/main/default/objects/CR_Vehicle_Information__c/fields/Lot_Number1__c.field-meta.xml
<CustomField>
    <fullName>Lot_Number1__c</fullName>
    <label>ロット番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>