force-app/main/default/objects/CR_Vehicle_Information__c/fields/Maker__c.field-meta.xml
<CustomField>
    <fullName>Maker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>メーカ</label>
    <referenceTo>Mst_Makers__c</referenceTo>
    <relationshipLabel>CR車両情報</relationshipLabel>
    <relationshipName>CR</relationshipName>
    <type>Lookup</type>
</CustomField>