force-app/main/default/objects/CR_Vehicle_Information__c/fields/Maker_text__c.field-meta.xml
<CustomField>
    <fullName>Maker_text__c</fullName>
    <label>メーカー（テキスト）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>