force-app/main/default/objects/CR_Vehicle_Information__c/fields/Model_English__c.field-meta.xml
<CustomField>
    <fullName>Model_English__c</fullName>
    <description>車種（英字）</description>
    <label>Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>