force-app/main/default/objects/CR_Vehicle_Information__c/fields/Model_text__c.field-meta.xml
<CustomField>
    <fullName>Model_text__c</fullName>
    <label>車種（テキスト）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>