force-app/main/default/objects/CR_Vehicle_Information__c/fields/Models__c.field-meta.xml
<CustomField>
    <fullName>Models__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>車種</label>
    <referenceTo>Mst_Models__c</referenceTo>
    <relationshipLabel>CR車両情報</relationshipLabel>
    <relationshipName>CR</relationshipName>
    <type>Lookup</type>
</CustomField>