force-app/main/default/objects/CR_Vehicle_Information__c/fields/Movement_Report_Check__c.field-meta.xml
<CustomField>
    <fullName>Movement_Report_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>移動報告</label>
    <type>Checkbox</type>
</CustomField>