force-app/main/default/objects/CR_Vehicle_Information__c/fields/Movement_Report_Date__c.field-meta.xml
<CustomField>
    <fullName>Movement_Report_Date__c</fullName>
    <label>移動報告日</label>
    <type>Date</type>
</CustomField>