force-app/main/default/objects/CR_Vehicle_Information__c/fields/Nearest_Arrival_Date__c.field-meta.xml
<CustomField>
    <fullName>Nearest_Arrival_Date__c</fullName>
    <label>最寄り到着日</label>
    <type>Date</type>
</CustomField>