force-app/main/default/objects/CR_Vehicle_Information__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>特記事項</label>
    <type>TextArea</type>
</CustomField>