force-app/main/default/objects/CR_Vehicle_Information__c/fields/Notes_longarea__c.field-meta.xml
<CustomField>
    <fullName>Notes_longarea__c</fullName>
    <label>特記事項</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>