force-app/main/default/objects/CR_Vehicle_Information__c/fields/Order_Received__c.field-meta.xml
<CustomField>
    <fullName>Order_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>受注</label>
    <type>Checkbox</type>
</CustomField>