force-app/main/default/objects/CR_Vehicle_Information__c/fields/Parts_or_Complete_Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Parts_or_Complete_Vehicle__c</fullName>
    <label>パーツ/丸車</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>パーツ</fullName>
            </value>
            <value>
                <fullName>丸車</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>