force-app/main/default/objects/CR_Vehicle_Information__c/fields/Permanent_Deletion_Date__c.field-meta.xml
<CustomField>
    <fullName>Permanent_Deletion_Date__c</fullName>
    <label>永抹日</label>
    <type>Date</type>
</CustomField>