force-app/main/default/objects/CR_Vehicle_Information__c/fields/Permanent_Deletion_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Permanent_Deletion_Deadline__c</fullName>
    <label>永久抹消期限</label>
    <type>Date</type>
</CustomField>