force-app/main/default/objects/CR_Vehicle_Information__c/fields/Permanent_Deletion_Flag__c.field-meta.xml
<CustomField>
    <fullName>Permanent_Deletion_Flag__c</fullName>
    <label>永抹フラグ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>永抹条件あり</fullName>
            </value>
            <value>
                <fullName>永抹条件なし</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>