force-app/main/default/objects/CR_Vehicle_Information__c/fields/PIC__c.field-meta.xml
<CustomField>
    <fullName>PIC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>現在の販売担当</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CR</relationshipName>
    <type>Lookup</type>
</CustomField>