force-app/main/default/objects/CR_Vehicle_Information__c/fields/profit__c.field-meta.xml
<CustomField>
    <fullName>profit__c</fullName>
    <description>売上-原価＝粗利</description>
    <formula>Sales__c  -  Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>粗利</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>