force-app/main/default/objects/CR_Vehicle_Information__c/fields/Recycle_date__c.field-meta.xml
<CustomField>
    <fullName>Recycle_date__c</fullName>
    <label>リサイクル券還付完了日</label>
    <type>Date</type>
</CustomField>