force-app/main/default/objects/CR_Vehicle_Information__c/fields/Remaining_Parts__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Parts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>残りパーツ</label>
    <type>Checkbox</type>
</CustomField>