force-app/main/default/objects/CR_Vehicle_Information__c/fields/Sales_Date__c.field-meta.xml
<CustomField>
    <fullName>Sales_Date__c</fullName>
    <label>売却日</label>
    <type>Date</type>
</CustomField>