force-app/main/default/objects/CR_Vehicle_Information__c/fields/selfpropulsion__c.field-meta.xml
<CustomField>
    <fullName>selfpropulsion__c</fullName>
    <label>自走</label>
    <length>255</length>
    <type>Text</type>
</CustomField>