force-app/main/default/objects/CR_Vehicle_Information__c/fields/Sell_place__c.field-meta.xml
<CustomField>
    <fullName>Sell_place__c</fullName>
    <label>売却エリア</label>
    <length>255</length>
    <type>Text</type>
</CustomField>