force-app/main/default/objects/CR_Vehicle_Information__c/fields/SELLPIC_text__c.field-meta.xml
<CustomField>
    <fullName>SELLPIC_text__c</fullName>
    <label>売却時販売担当者（テキスト）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>