force-app/main/default/objects/CR_Vehicle_Information__c/fields/Send_Vehicle_Registration_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Send_Vehicle_Registration_Certificate__c</fullName>
    <label>車検証送付</label>
    <type>Date</type>
</CustomField>