force-app/main/default/objects/CR_Vehicle_Information__c/fields/special_kbn__c.field-meta.xml
<CustomField>
    <fullName>special_kbn__c</fullName>
    <label>販売条件</label>
    <length>255</length>
    <type>Text</type>
</CustomField>