force-app/main/default/objects/CR_Vehicle_Information__c/fields/Start_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Start_Remarks__c</fullName>
    <label>立ち上げ時　備考</label>
    <length>255</length>
    <type>Text</type>
</CustomField>