force-app/main/default/objects/CR_Vehicle_Information__c/fields/Stock_Number__c.field-meta.xml
<CustomField>
    <fullName>Stock_Number__c</fullName>
    <label>管理番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>