force-app/main/default/objects/CR_Vehicle_Information__c/fields/Surrender_Original_Sea_waybill__c.field-meta.xml
<CustomField>
    <fullName>Surrender_Original_Sea_waybill__c</fullName>
    <label>Surrender/Original/Sea waybill</label>
    <length>255</length>
    <type>Text</type>
</CustomField>