force-app/main/default/objects/CR_Vehicle_Information__c/fields/Transport_Arrangement_Date__c.field-meta.xml
<CustomField>
    <fullName>Transport_Arrangement_Date__c</fullName>
    <label>陸送手配日</label>
    <type>Date</type>
</CustomField>