force-app/main/default/objects/CR_Vehicle_Information__c/fields/Transporter__c.field-meta.xml
<CustomField>
    <fullName>Transporter__c</fullName>
    <label>陸送業者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>