force-app/main/default/objects/CR_Vehicle_Information__c/fields/Type_text__c.field-meta.xml
<CustomField>
    <fullName>Type_text__c</fullName>
    <label>型式（テキスト）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>