force-app/main/default/objects/CR_Vehicle_Information__c/fields/Types__c.field-meta.xml
<CustomField>
    <fullName>Types__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>型式</label>
    <referenceTo>Mst_Types__c</referenceTo>
    <relationshipLabel>CR車両情報</relationshipLabel>
    <relationshipName>CR</relationshipName>
    <type>Lookup</type>
</CustomField>