force-app/main/default/objects/CR_Vehicle_Information__c/fields/value_date__c.field-meta.xml
<CustomField>
    <fullName>value_date__c</fullName>
    <label>着金日</label>
    <type>Date</type>
</CustomField>