force-app/main/default/objects/CR_Vehicle_Information__c/fields/Winning_Member__c.field-meta.xml
<CustomField>
    <fullName>Winning_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>落札会員</label>
    <referenceTo>Member__c</referenceTo>
    <relationshipLabel>CR車両情報</relationshipLabel>
    <relationshipName>CR1</relationshipName>
    <type>Lookup</type>
</CustomField>