force-app/main/default/objects/CR_Vehicle_Information__c/fields/Yard__c.field-meta.xml
<CustomField>
    <fullName>Yard__c</fullName>
    <label>置き場情報</label>
    <length>255</length>
    <type>Text</type>
</CustomField>