force-app/main/default/objects/CR_Vehicle_Information__c/fields/Yard_near_or_dismantling__c.field-meta.xml
<CustomField>
    <fullName>Yard_near_or_dismantling__c</fullName>
    <label>搬入先</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>最寄りヤード</fullName>
            </value>
            <value>
                <fullName>解体ヤード</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>