force-app/main/default/objects/CR_Vehicle_Information__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Winning_Member__c</columns>
    <columns>Container_Number__c</columns>
    <columns>Auction_Data__c</columns>
    <columns>Lot_Number1__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>value_date__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>