force-app/main/default/objects/CR_Vehicle_Information__c/listViews/copy.listView-meta.xml
<ListView>
    <fullName>copy</fullName>
    <columns>NAME</columns>
    <columns>Model_English__c</columns>
    <columns>Chassis_Number__c</columns>
    <columns>Sales_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Dismantling_CompanyDis_pulldown__c</field>
        <operation>equals</operation>
        <value>AFKトレーディング</value>
    </filters>
    <label>コピペ用</label>
</ListView>